# regelum-calf

./: LICENSE  README.md  generate_selected_observations.py  plots.ipynb  pyproject.toml  requirements.txt  selected_observations.yaml  user_settings.yaml
bash/calf/: inverted_pendulum.sh  lunar_lander.sh  omnibot.sh
bash/ddpg/: inverted_pendulum.sh  lunar_lander.sh  omnibot.sh
bash/nominal/: 2tank.sh  omnibot.sh  pendulum.sh
bash/ppo/: 2tank.sh  omnibot.sh
bash/reinforce/: inverted_pendulum.sh  lunar_lander.sh
bash/sac/: 2tank.sh  3wrobot_kin.sh  inverted_pendulum.sh  lunar_lander.sh  pendulum.sh
bash/td3/: 2tank.sh  lunar_lander.sh
bash/vpg/: lunar_lander.sh  omnibot.sh
code/: .gitattributes  .gitignore  README.md  reproduce.py
code/exman/: main_body_plot_config.yaml  plot_config.yaml  schema.py
code/goalagent/: run_stable.py  sac.py  td3.py
code/rehydra/: .isort.cfg  pyproject.toml
code/srccode/: __init__.py  animation.py  configure.py  critic.py  objective.py  observer.py  policy.py  predictor.py  simulator.py  stopping_criterion.py  system.py  typing.py  utils.py
exman/: target_sets.yaml  utils.py
goalagent/: __init__.py  calf.py  calfq.py
goalagent/calf/: agent_calf.py  agent_calfq.py  utilities.py
goalagent/env/: __init__.py  pendulum.py  robot.py  running_objective.py  two_tank.py
goalagent/utils/: utils.py
plots/calf_2tank/: perfomance.h5  (+3 more)
rehydra/: .flake8  .mypy.ini  .pre-commit-config.yaml  .yamllint  MANIFEST.in  README.md  noxfile.py  pytest.ini  setup.py
srccode/: callback.py  constraint_parser.py  model.py  scenario.py
(+540 files in other folders)
